# Sheet-Agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVOPS-PRACTICES-TEMPLATE.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: app.py
app/api/endpoints/: health.py  opos.py
app/core/: config.py  logging_config.py  prompt_manager.py  report_generator.py
app/dataset/: dataloader.py
app/graph/: graph.py  state.py
app/services/: analysis_service.py
app/utils/: gcs.py  semantic_schema.py
tests/core/: test_config.py
tests/fixtures/: Opos-test.xlsx  Sample-Output.xlsx
